--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
+body{
+    text-justify: center;
+}
 
+
+
+#main-tribute {
+    
+    justify-content: center;
+    text-justify: center;
+    width: 100%;
+}
+
+
+#first-thing {
+    
+}
